--- a/apps/docs/app/globals.css
+++ b/apps/docs/app/globals.css
@@ -3,7 +3,7 @@
 
 @custom-variant dark (&:is(.dark *));
 
-html,
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
@@ -151,4 +151,4 @@ a {
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
